--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,16 @@
   <title>reader-books</title>
   <link href="/你不知道的JavaScript(中卷).epub" rel="prefetch" />
   <link href="/你不知道的JavaScript(下卷).epub" rel="prefetch" />
+  <script>
+    var _hmt = _hmt || [];
+    (function () {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?d7a4baee85b791d5161e42272ee0a78c";
+      var s = document.getElementsByTagName("script")[0];
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
+
 </head>
 
 <body>
